# Native-GLM-ACP

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: AGENTS.md
.github/workflows/: ci.yml  quality.yml  release.yml
benchmarks/: AGENTS.md  cases.json  eval.py  report.py  run_live.py
glm_acp/: AGENTS.md  __init__.py  agent.py  awareness.py  checkpoints.py  cli.py  config.py  deliberation.py  diagnostics.py  failure_corpus.py  glm_client.py  guardrails.py  hooks.py  mcp.py  memory.py  metacognition.py  observability.py  os_sandbox.py  plugin_cli.py  plugins.py  policy.py  profiles.py  project_context.py  references.py  resilience.py  security.py  session_store.py  telemetry.py  terminal_cli.py  tools.py  tui.py  uninstall.py  verification.py  voice.py  workflows.py  worktrees.py
registry/: agent.json
scripts/: AGENTS.md  install.ps1  install.sh
tests/: AGENTS.md  conftest.py  test_agent.py  test_awareness.py  test_cli.py  test_compaction.py  test_config.py  test_deliberation.py  test_extensions.py  test_glm_client.py  test_hardening_roadmap.py  test_installers.py  test_mcp.py  test_memory.py  test_metacognition.py  test_quality.py  test_registry_package.py  test_reliability.py  test_safety_roadmap.py  test_security.py  test_session_store.py  test_stream_integration.py  test_terminal_cli.py  test_tools.py  test_tui.py  test_uninstall.py  test_voice.py
